@@ -63,6 +63,10 @@ PHP 8.3 UPGRADE NOTES
     casing rules for the Greek letter sigma. For mb_convert_case, conditional
     casing only applies to MB_CASE_LOWER and MB_CASE_TITLE modes, not to
     MB_CASE_LOWER_SIMPLE and MB_CASE_TITLE_SIMPLE. (Alex Dowad)
+  . mb_decode_mimeheader handles underscores in QPrint-encoded MIME encoded
+    words as dictated by RFC 2047; they are converted to spaces (byte 0x20).
+    To include a underscore in a QPrint-encoded MIME encoded word, it must
+    be encoded as "=5F". (Alex Dowad)
 
 - Standard:
   . E_NOTICEs emitted by unserialized() have been promoted to E_WARNING.
